--- a/notebooks/06_classification_baseline.ipynb
+++ b/notebooks/06_classification_baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "3d41463e",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "5ec664ea",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
        "4         565         259         3.8462        NEAR BAY        HIGH  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "9cb885bd",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
        " Name: count, dtype: int64)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "4c1467d3",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "4ecf8ff8",
    "metadata": {},
    "outputs": [],
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "daa45d84",
    "metadata": {},
    "outputs": [],
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "5bbdefd5",
    "metadata": {},
    "outputs": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "4180a34f",
    "metadata": {},
    "outputs": [
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "c6a46769",
    "metadata": {},
    "outputs": [],
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "e759935d",
    "metadata": {},
    "outputs": [],
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "065f8d78",
    "metadata": {},
    "outputs": [],
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "ba34a041",
    "metadata": {},
    "outputs": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "id": "a00338e8",
    "metadata": {},
    "outputs": [
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "7c07c33b",
    "metadata": {},
    "outputs": [],
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "id": "8e6ca25e",
    "metadata": {},
    "outputs": [],
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "id": "89db6cc0",
    "metadata": {},
    "outputs": [],
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "id": "36847906",
    "metadata": {},
    "outputs": [
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "id": "cc73ca5b",
    "metadata": {},
    "outputs": [
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "id": "86e98f6d",
    "metadata": {},
    "outputs": [
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "id": "64cf2f57",
    "metadata": {},
    "outputs": [],
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "id": "40399547",
    "metadata": {},
    "outputs": [],
@@ -712,14 +712,16 @@
     "    steps=[\n",
     "        (\"preprocessing\", preprocessor),\n",
     "        (\"classifier\", XGBClassifier(\n",
-    "            objective=\"multi:softprob\",\n",
-    "            num_class=3,\n",
-    "            eval_metric=\"mlogloss\",\n",
-    "            random_state=42,\n",
-    "            n_estimators=200,\n",
-    "            learning_rate=0.1,\n",
-    "            max_depth=6,\n",
-    "            n_jobs=-1\n",
+    "            objective=\"multi:softmax\",\n",
+    "    num_class=3,\n",
+    "    tree_method=\"hist\",\n",
+    "    device=\"cpu\",\n",
+    "    n_estimators=300,\n",
+    "    max_depth=6,\n",
+    "    learning_rate=0.1,\n",
+    "    subsample=0.8,\n",
+    "    colsample_bytree=0.8,\n",
+    "    random_state=42\n",
     "        )),\n",
     "    ]\n",
     ")\n"
@@ -727,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
    "id": "1d06c9b7",
    "metadata": {},
    "outputs": [
@@ -735,8 +737,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XGBoost CV F1 scores: [0.82008148 0.80966739 0.80741815]\n",
-      "Mean XGB CV F1: 0.8123890033303399\n"
+      "XGBoost CV F1 scores: [0.82359756 0.81091066 0.81498311]\n",
+      "Mean XGB CV F1: 0.8164971095483096\n"
      ]
     }
    ],
@@ -757,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "id": "1823fa57",
    "metadata": {},
    "outputs": [
@@ -765,19 +767,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XGBoost Test F1-score: 0.8228747707296047\n",
+      "XGBoost Test F1-score: 0.823594438031543\n",
       "\n",
       "Classification Report:\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "        HIGH       0.89      0.84      0.86      1376\n",
+      "        HIGH       0.89      0.83      0.86      1376\n",
       "         LOW       0.84      0.88      0.86      1377\n",
-      "      MEDIUM       0.74      0.75      0.75      1375\n",
+      "      MEDIUM       0.74      0.76      0.75      1375\n",
       "\n",
       "    accuracy                           0.82      4128\n",
-      "   macro avg       0.82      0.82      0.82      4128\n",
-      "weighted avg       0.82      0.82      0.82      4128\n",
+      "   macro avg       0.83      0.82      0.82      4128\n",
+      "weighted avg       0.83      0.82      0.82      4128\n",
       "\n"
      ]
     }
@@ -813,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "fc27de0c",
    "metadata": {},
    "outputs": [],
@@ -823,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "id": "99539f54",
    "metadata": {},
    "outputs": [
@@ -846,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 26,
    "id": "c64b8960",
    "metadata": {},
    "outputs": [],
@@ -864,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 27,
    "id": "ba5684f5",
    "metadata": {},
    "outputs": [],
@@ -895,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 28,
    "id": "929e8aba",
    "metadata": {},
    "outputs": [],
@@ -917,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 29,
    "id": "f2c2f057",
    "metadata": {},
    "outputs": [
@@ -948,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "8b8ed23a",
    "metadata": {},
    "outputs": [],
@@ -965,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 31,
    "id": "9a1dc0f2",
    "metadata": {},
    "outputs": [],
@@ -979,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 32,
    "id": "c6d72276",
    "metadata": {},
    "outputs": [
@@ -987,18 +989,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FINAL XGBoost Test F1-score: 0.8228747707296047\n",
+      "FINAL XGBoost Test F1-score: 0.823594438031543\n",
       "\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "        HIGH       0.89      0.84      0.86      1376\n",
+      "        HIGH       0.89      0.83      0.86      1376\n",
       "         LOW       0.84      0.88      0.86      1377\n",
-      "      MEDIUM       0.74      0.75      0.75      1375\n",
+      "      MEDIUM       0.74      0.76      0.75      1375\n",
       "\n",
       "    accuracy                           0.82      4128\n",
-      "   macro avg       0.82      0.82      0.82      4128\n",
-      "weighted avg       0.82      0.82      0.82      4128\n",
+      "   macro avg       0.83      0.82      0.82      4128\n",
+      "weighted avg       0.83      0.82      0.82      4128\n",
       "\n"
      ]
     }
@@ -1021,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 33,
    "id": "d67495a9",
    "metadata": {},
    "outputs": [
