--- a/notebooks/06_classification_baseline.ipynb
+++ b/notebooks/06_classification_baseline.ipynb
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "id": "40399547",
    "metadata": {},
    "outputs": [],
@@ -711,17 +711,20 @@
     "xgb_pipeline = Pipeline(\n",
     "    steps=[\n",
     "        (\"preprocessing\", preprocessor),\n",
-    "        (\"classifier\", XGBClassifier(\n",
-    "            objective=\"multi:softmax\",\n",
-    "    num_class=3,\n",
-    "    tree_method=\"hist\",\n",
-    "    device=\"cpu\",\n",
-    "    n_estimators=300,\n",
-    "    max_depth=6,\n",
-    "    learning_rate=0.1,\n",
-    "    subsample=0.8,\n",
-    "    colsample_bytree=0.8,\n",
-    "    random_state=42\n",
+    "        (\n",
+    "            \"classifier\",\n",
+    "            XGBClassifier(\n",
+    "                objective=\"multi:softmax\",\n",
+    "                num_class=3,\n",
+    "                eval_metric=\"mlogloss\",\n",
+    "                tree_method=\"hist\",          # ✅ CPU-only\n",
+    "                predictor=\"cpu_predictor\",  # ✅ Force CPU\n",
+    "                n_estimators=300,\n",
+    "                max_depth=6,\n",
+    "                learning_rate=0.1,\n",
+    "                subsample=0.8,\n",
+    "                colsample_bytree=0.8,\n",
+    "                random_state=42,\n",
     "        )),\n",
     "    ]\n",
     ")\n"
@@ -729,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "id": "1d06c9b7",
    "metadata": {},
    "outputs": [
@@ -759,10 +762,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 36,
    "id": "1823fa57",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ASSUS\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python313\\site-packages\\xgboost\\training.py:199: UserWarning: [18:55:46] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\learner.cc:790: \n",
+      "Parameters: { \"predictor\" } are not used.\n",
+      "\n",
+      "  bst.update(dtrain, iteration=i, fobj=obj)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
